Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2491

unable to import generated ThriftTest service

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • None
    • 0.9.2
    • Go - Compiler, Go - Library
    • None
    • Patch Available

    Description

      IDL compiler uses service name converted from camel case to underscores as a file name. service ThriftTest {} goes into thrift_test.go, which is not being compiled since the file match *_test.go mask.

      Attachments

        Activity

          People

            jensg Jens Geyer
            apesternikov Aleksey Pesternikov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: