THRIFT-2491 unable to import generated ThriftTest service Client: Go Patch: Aleksey Pesternikov

Go codegen fix regarding Process(), as discussed in THRIFT-2491.
Belongs to pull request 109.